# Lunch-log

./: .gitignore  Dockerfile.dev  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
backend/: celery.py  urls.py  wsgi.py
backend/apps/receipts/: apps.py  models.py  serializers.py  tests.py  urls.py  utils.py  views.py
backend/apps/receipts/migrations/: 0001_initial.py
backend/apps/recommendations/: apps.py  urls.py  views.py
backend/apps/restaurants/: apps.py  models.py  serializers.py  services.py  signals.py  tasks.py  urls.py  views.py
backend/apps/restaurants/migrations/: 0001_initial.py  0002_userrestaurantinteraction.py  0003_alter_restaurant_place_id.py
backend/apps/restaurants/tests/: test_services.py  test_tasks.py  test_views.py
backend/apps/users/: apps.py  manager.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/apps/users/migrations/: 0001_initial.py  0002_remove_user_location.py
backend/settings/: __init__.py  base.py  dev.py  prod.py
